fix horizontal scrollbar

--- a/css.css
+++ b/css.css
@@ -312,6 +312,7 @@ a span {
 
 *::-webkit-scrollbar {
     width: 10px;
+    height: 10px;
 }
 
 *::-webkit-scrollbar-thumb {
